# refactor

./: .gitignore  LICENSE  Readme.md  bloat.hpp  build.bat  clean.bat  meson.build  refactor.10x  refactor.cpp
.github/workflows/: main.yml
Test/: bloat.hpp  bloat.refactored.hpp  meson.build  project.refactor  refactor.cpp  refactor.refactored.cpp  stb_image.refactor  zpl.h.refactor  zpl.refactor  zpl.refactored.h
other/: refactor.cpp
project/: Bloat.cpp  Bloat.hpp  IO.cpp  IO.hpp  Readme.md  Spec.cpp  Spec.hpp  _Docs.md  bloat.hpp  refactor.cpp
scripts/: build.ci.ps1  build.ps1  clean.ps1  get_sources.ps1  meson.build  refactor_and_format.ps1  template_reafactor.ps1
